test/expected/k_explain_bl_i.out
explain int (^S)()
              ^
15: error: "S": previously declared as type: typedef struct S S
